Converted to HTML https://github.com/pvarki/rasenmaeher-ui/issues/43

--- a/src/views/products/data/TakQuickstartAndroid1.html
+++ b/src/views/products/data/TakQuickstartAndroid1.html
@@ -1,4 +1,4 @@
-<View name="TakQuickstartAndroid1">
+<View name="TakQuickstartAndroid1" path="quickstart/android1">
   <div class="pb-20">
     <Layout
       showNavbar="true"
