Saved some changes

--- a/src/views/products/data/TakQuickstartAndroid1.html
+++ b/src/views/products/data/TakQuickstartAndroid1.html
@@ -20,7 +20,7 @@
           ></ServiceInfoCard>
           <UnfoldableCard
             title="takQuickstartAndroid1.unfoldableCard1.title"
-            styling="bg-backgroundLight"
+            class="bg-backgroundLight"
           >
             <Description>takQuickstartAndroid1.unfoldableCard1.description1</Description>
             <Image src="../../../assets/icons/googleplay.png"
@@ -34,7 +34,7 @@
           </UnfoldableCard>
           <UnfoldableCard
             title="takQuickstartAndroid1.unfoldableCard2.title"
-            styling="bg-backgroundLight">
+            class="bg-backgroundLight">
             <Description>takQuickstartAndroid1.unfoldableCard2.description1</Description>
             <Description>
               <Button
@@ -47,7 +47,7 @@
           </UnfoldableCard>
           <UnfoldableCard
             title="takQuickstartAndroid1.unfoldableCard3.title"
-            styling="bg-backgroundLight"
+            class="bg-backgroundLight"
           >
             <Description>takQuickstartAndroid1.unfoldableCard3.description1</Description>
             <Image src="../../../assets/takguides/atak/wait.png"
