Implemented markdown support https://github.com/hyperifyio/rune/issues/22

--- a/src/views/products/data/TakQuickstartAndroid3.html
+++ b/src/views/products/data/TakQuickstartAndroid3.html
@@ -1,1 +1,3 @@
-<View name="TakQuickstartAndroid3" path="quickstart/android3"></View>
+<View name="TakQuickstartAndroid3" path="quickstart/android3">
+
+</View>
