--- a/src/views/products/data/tak/TakQuickstartAndroid1.html
+++ b/src/views/products/data/tak/TakQuickstartAndroid1.html
@@ -15,7 +15,7 @@
         <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
           <ServiceInfoCard
             title="takQuickstartAndroid1.serviceInfoCardTitle"
-            image="../../../assets/takguides/atak/wait.png"
+            image="../../../../assets/takguides/atak/wait.png"
             details="takQuickstartAndroid1.serviceInfoCard.details"
           ></ServiceInfoCard>
           <UnfoldableCard
@@ -23,11 +23,11 @@
             class="bg-backgroundLight"
           >
             <Description>takQuickstartAndroid1.unfoldableCard1.description1</Description>
-            <Image src="../../../assets/icons/googleplay.png"
+            <Image src="../../../../assets/icons/googleplay.png"
               link="https://play.google.com/store/apps/details?id=com.atakmap.app.civ"
               class="w-[200px]"></Image>
             <Description>takQuickstartAndroid1.unfoldableCard1.description2</Description>
-            <Image src="../../../assets/icons/googleplay.png"
+            <Image src="../../../../assets/icons/googleplay.png"
               class="w-[200px]"
               link="https://play.google.com/store/apps/details?id=com.atakmap.android.datasync.plugin"
             ></Image>
@@ -50,7 +50,7 @@
             class="bg-backgroundLight"
           >
             <Description>takQuickstartAndroid1.unfoldableCard3.description1</Description>
-            <Image src="../../../assets/takguides/atak/wait.png"
+            <Image src="../../../../assets/takguides/atak/wait.png"
                    class="m-3 w-[200px]"
             ></Image>
             <Description>takQuickstartAndroid1.unfoldableCard3.description2</Description>
