--- a/src/views/products/data/livelog/ServiceLivelogUsage.html
+++ b/src/views/products/data/livelog/ServiceLivelogUsage.html
@@ -9,11 +9,35 @@
     >
       <div class="flex flex-col flex-shrink-0">
         <div class="flex flex-col items-center justify-center mx-2 h-[calc(100vh - 4rem)] md:px-[20%] lg:px-[16%]">
-          <ServiceInfoCard title="serviceLivelogUsageView.title">
-            <div class="note m-2 text-white prose prose-white">
-              <LivelogUsage></LivelogUsage>
-            </div>
-          </ServiceInfoCard>
+
+          <UnfoldableCard title="serviceLivelogUsageView.subtitle1"
+                          class="bg-backgroundLight">
+            <LivelogNote>
+              <LivelogUsage1></LivelogUsage1>
+            </LivelogNote>
+          </UnfoldableCard>
+
+          <UnfoldableCard title="serviceLivelogUsageView.subtitle2"
+                          class="bg-backgroundLight">
+            <LivelogNote>
+              <LivelogUsage2></LivelogUsage2>
+            </LivelogNote>
+          </UnfoldableCard>
+
+          <UnfoldableCard title="serviceLivelogUsageView.subtitle3"
+                          class="bg-backgroundLight">
+            <LivelogNote>
+              <LivelogUsage3></LivelogUsage3>
+            </LivelogNote>
+          </UnfoldableCard>
+
+          <UnfoldableCard title="serviceLivelogUsageView.subtitle4"
+                          class="bg-backgroundLight">
+            <LivelogNote>
+              <LivelogUsage4></LivelogUsage4>
+            </LivelogNote>
+          </UnfoldableCard>
+
         </div>
       </div>
     </Layout>
