Fixed some TSX to HTML

--- a/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid4.html
+++ b/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid4.html
@@ -1,59 +1,44 @@
 <View name="TakQuickstartAndroid4" path="quickstart/android4">
-  <div className="pb-20">
+  <div class="pb-20">
     <Layout
       showNavbar="true"
       showFooter="false"
-      navbarTitle={"TakQuickstartAndroid4.navbarTitle"}
+      navbarTitle="TakQuickstartAndroid4.navbarTitle"
       backUrl="/app/services/tak/quickstart"
     >
       <StatusBar
-        title={"TakQuickstartAndroid4.statusBarTitle"}
+        title="TakQuickstartAndroid4.statusBarTitle"
         progressMax="5"
         progressNow="4"
       />
       <CardsContainer>
-        <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+        <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
           <ServiceInfoCard
             title="ATAK"
             image="../../../../../../assets/icons/tak-logo.png"
-            details={
-              <Trans i18nKey="TakQuickstartAndroid4.serviceInfoCard.details"
-              />
-            }
+            details="TakQuickstartAndroid4.serviceInfoCard.details"
           />
           <UnfoldableCard
-            title={t("TakQuickstartAndroid4.unfoldableCard1.title")}
+            title="TakQuickstartAndroid4.unfoldableCard1.title"
             styling="bg-backgroundLight"
             steps={[
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard1.step1"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard1.step1",
                 imageSrc: "../../../../../../assets/takguides/atak/atakdatasync111.jpg",
                 imageClasses: "m-3 w-[400px]",
               },
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard1.step2"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard1.step2",
                 imageSrc: "../../../../../../assets/takguides/atak/atakdatasync12.jpg",
                 imageClasses: "m-3 w-[400px]",
               },
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard1.step3"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard1.step3",
                 imageSrc: "../../../../../../assets/takguides/atak/atakdatasync13.jpg",
                 imageClasses: "m-3 w-[400px]",
               },
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard1.step4"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard1.step4",
                 imageSrc: "../../../../../../assets/takguides/atak/atakdatasync14.jpg",
                 imageClasses: "m-3 w-[400px]",
               },
@@ -63,7 +48,7 @@
             ]}
           />
           <UnfoldableCard
-            title={t("TakQuickstartAndroid4.unfoldableCard2.title")}
+            title="TakQuickstartAndroid4.unfoldableCard2.title"
             styling="bg-backgroundLight"
             steps={[
               {
@@ -72,59 +57,38 @@
                 imageClasses: "m-3 w-[400px]",
               },
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard2.step2"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard2.step2",
               },
               {
                 description: "TakQuickstartAndroid4.unfoldableCard2.step3",
               },
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard2.step4"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard2.step4",
                 imageSrc: "../../../../../../assets/takguides/atak/datasyncatak99.png",
                 imageClasses: "m-3 w-[400px]",
               },
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard2.step5"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard2.step5",
                 imageSrc: "../../../../../../assets/takguides/atak/atakdatasync3.png",
                 imageClasses: "m-3 w-[400px]",
               },
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard2.step6"
-                  />
-                ),
-                note: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard2.note"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard2.step6",
+                note: "TakQuickstartAndroid4.unfoldableCard2.note",
               },
             ]}
           />
           <UnfoldableCard
-            title={"TakQuickstartAndroid4.unfoldableCard3.title"}
+            title="TakQuickstartAndroid4.unfoldableCard3.title"
             styling="bg-backgroundLight"
             steps={[
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard3.step1"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard3.step1",
                 imageSrc: "../../../../../../assets/takguides/atak/atakdatasync4.png",
                 imageClasses: "m-3 w-[400px]",
               },
               {
-                description: (
-                  <Trans i18nKey="TakQuickstartAndroid4.unfoldableCard3.step2"
-                  />
-                ),
+                description: "TakQuickstartAndroid4.unfoldableCard3.step2",
                 imageSrc: "../../../../../../assets/takguides/atak/atakdatasync5.png",
                 imageClasses: "m-3 w-[400px]",
               },
