--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos4.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos4.html
@@ -2,89 +2,54 @@
   name="TakQuickstartIos4"
   path="quickstart/ios4"
 >
-  <div className="pb-20">
+  <div class="pb-20">
       <Layout
         showNavbar="true"
         showFooter="false"
-        navbarTitle={t("TakQuickstartIos4.navbarTitle")}
+        navbarTitle="TakQuickstartIos4.navbarTitle"
         backUrl="/app/services/tak/quickstart"
       >
         <StatusBar
-          title={t("TakQuickstartIos4.statusBarTitle")}
+          title="TakQuickstartIos4.statusBarTitle"
           progressMax="5"
           progressNow="4"
         />
         <CardsContainer>
-          <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="iTAK"
               image="../../../../../../assets/icons/iTAK.png"
-              details={
-                <Trans i18nKey="TakQuickstartIos4.serviceInfoCard.details"
-                />
-              }
+              details="TakQuickstartIos4.serviceInfoCard.details"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard1.title"
-                />
-              }
+              title="TakQuickstartIos4.unfoldableCard1.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard1.description1"
-                />
-              }
+              description1="TakQuickstartIos4.unfoldableCard1.description1"
               image2Src="../../../../../../assets/takguides/itak/itakquickstart21.png"
               image2Classes="mx-auto pr-5 w-[240px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard1.description2"
-                />
-              }
+              description2="TakQuickstartIos4.unfoldableCard1.description2"
               image3Src="../../../../../../assets/takguides/itak/itakquickstart22.png"
               image3Classes="mx-auto pr-5 w-[240px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard1.description3" />
-              }
+              description3="TakQuickstartIos4.unfoldableCard1.description3"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard2.title"
-                />
-              }
+              title="TakQuickstartIos4.unfoldableCard2.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard2.description1"
-                />
-              }
-              description2={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard2.description2"
-                />
-              }
+              description1="TakQuickstartIos4.unfoldableCard2.description1"
+              description2="TakQuickstartIos4.unfoldableCard2.description2"
               image2Src="../../../../../../assets/takguides/itak/itakquickstart23.png"
               image2Classes="mx-auto pr-5 w-[240px] p-4"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard3.title"
-                />
-              }
+              title="TakQuickstartIos4.unfoldableCard3.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard3.description1"
-                />
-              }
+              description1="TakQuickstartIos4.unfoldableCard3.description1"
               image2Src="../../../../../../assets/takguides/itak/itakquickstart21.png"
               image2Classes="mx-auto pr-5 w-[240px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard3.description2"
-                />
-              }
+              description2="TakQuickstartIos4.unfoldableCard3.description2"
               image3Src="../../../../../../assets/takguides/itak/itakqucikstart22.png"
               image3Classes="mx-auto pr-5 w-[240px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartIos4.unfoldableCard3.description3"
-                />
-              }
+              description3="TakQuickstartIos4.unfoldableCard3.description3"
             />
           </div>
         </CardsContainer>
