--- a/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid3.html
+++ b/src/views/products/data/tak/quickstart/android/TakQuickstartAndroid3.html
@@ -1,5 +1,5 @@
 <View name="TakQuickstartAndroid3" path="quickstart/android3">
-  <div className="pb-20">
+  <div class="pb-20">
     <Layout
       showNavbar="true"
       showFooter="false"
@@ -12,7 +12,7 @@
         progressNow="3"
       />
       <CardsContainer>
-        <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+        <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
           <ServiceInfoCard
             title="ATAK"
             image="../../../../../../assets/icons/tak-logo.png"
