--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos1.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos1.html
@@ -2,7 +2,7 @@
   name="TakQuickstartIos1"
   path="quickstart/ios1"
 >
-  <div className="pb-20">
+  <div class="pb-20">
   <Layout
     showNavbar="true"
     showFooter="false"
@@ -10,19 +10,19 @@
     backUrl="/app/services/tak/quickstart"
   >
     <StatusBar
-      title={"TakQuickstartIos1.statusBarTitle"}
+      title="TakQuickstartIos1.statusBarTitle"
       progressMax="5"
       progressNow={1}
     />
     <CardsContainer>
-      <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+      <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
         <ServiceInfoCard
           title="iTAK"
           image="../../../../../../assets/icons/iTAK.png"
           details=TakQuickstartIos1.serviceInfoCard.details"
         />
         <UnfoldableCard
-          title={"TakQuickstartIos1.unfoldableCard1.title"}
+          title="TakQuickstartIos1.unfoldableCard1.title"
           styling="bg-backgroundLight"
           description1="TakQuickstartIos1.unfoldableCard1.description1"
           image2Src="../../../../../../assets/icons/appstore.svg"
@@ -30,7 +30,7 @@
           image2Classes="w-[200px]"
         />
         <UnfoldableCard
-          title={"TakQuickstartIos1.unfoldableCard2.title"}
+          title="TakQuickstartIos1.unfoldableCard2.title"
           styling="bg-backgroundLight"
           description1=TakQuickstartIos1.unfoldableCard2.description1"
           description2={
@@ -39,10 +39,10 @@
               onClick="downloadZip"
               styling="m-1 px-3 bg-success text-white w-full"
             >
-              {"serviceTak.grabZipButton"}
+              "serviceTak.grabZipButton"
             </Button>
           }
-          note={"TakQuickstartIos1.unfoldableCard2.note"}
+          note="TakQuickstartIos1.unfoldableCard2.note"
         />
       </div>
     </CardsContainer>
