--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos2.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos2.html
@@ -2,20 +2,20 @@
   name="TakQuickstartIos2"
   path="quickstart/ios2"
 >
-  <div className="pb-20">
+  <div class="pb-20">
     <Layout
       showNavbar="true"
       showFooter="false"
-      navbarTitle={"TakQuickstartIos2.navbarTitle"}
+      navbarTitle="TakQuickstartIos2.navbarTitle"
       backUrl="/app/services/tak/quickstart"
     >
       <StatusBar
-        title={"TakQuickstartIos2.statusBarTitle"}
+        title="TakQuickstartIos2.statusBarTitle"
         progressMax="5"
         progressNow={2}
       />
       <CardsContainer>
-        <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+        <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
           <ServiceInfoCard
             title="iTAK"
             image="../../../../../../assets/icons/iTAK.png"
@@ -47,32 +47,18 @@
           }
           />
           <UnfoldableCard
-            title={
-          <Trans i18nKey="TakQuickstartIos2.unfoldableCard4.title"
-          />
-          }
+            title="TakQuickstartIos2.unfoldableCard4.title"
           styling="bg-backgroundLight"
-          description1={
-          <Trans i18nKey="TakQuickstartIos2.unfoldableCard4.description1"
-          />
-          }
+          description1="TakQuickstartIos2.unfoldableCard4.description1"
           image2Src="../../../../../../assets/takguides/itak/itakquickstart4.png"
           image2Classes="mx-auto pr-5 w-[240px] p-4"
-          description2={
-          <Trans i18nKey="TakQuickstartIos2.unfoldableCard4.description2"
-          />
-          }
+          description2="TakQuickstartIos2.unfoldableCard4.description2"
           image3Src="../../../../../../assets/takguides/itak/itakquickstart5.png"
           image3Classes="mx-auto pr-5 w-[240px] p-4"
-          description3={
-          <Trans i18nKey="TakQuickstartIos2.unfoldableCard4.description3"
-          />
-          }
+          description3="TakQuickstartIos2.unfoldableCard4.description3"
           image4Src="../../../../../../assets/takguides/itak/itakquickstart7.png"
           image4Classes="mx-auto pr-5 w-[240px] p-4"
-          description4={
-          <Trans i18nKey="TakQuickstartIos2.unfoldableCard4.description4" />
-          }
+          description4="TakQuickstartIos2.unfoldableCard4.description4"
           />
         </div>
       </CardsContainer>
