--- a/src/views/products/data/tak/quickstart/ios/TakQuickstartIos3.html
+++ b/src/views/products/data/tak/quickstart/ios/TakQuickstartIos3.html
@@ -2,7 +2,7 @@
     name="TakQuickstartIos3"
     path="quickstart/ios3"
 >
-    <div className="pb-20">
+    <div class="pb-20">
         <Layout
             showNavbar="true"
             showFooter="false"
@@ -15,80 +15,50 @@
                 progressNow="3"
             />
             <CardsContainer>
-                <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+                <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
                     <ServiceInfoCard
                         title="iTAK"
                         image="../../../../../../assets/icons/iTAK.png"
-                        details={
-                            <Trans i18nKey="TakQuickstartIos3.serviceInfoCard.details"
-                            />
-                        }
+                        details="TakQuickstartIos3.serviceInfoCard.details"
                     />
                     <UnfoldableCard
-                        title={
-                            <Trans i18nKey="TakQuickstartIos3.unfoldableCard1.title"
-                            />
-                        }
+                        title="TakQuickstartIos3.unfoldableCard1.title"
                         styling="bg-backgroundLight"
                         steps={ [
                             {
-                                description : (
-                                    <Trans i18nKey="TakQuickstartIos3.unfoldableCard1.step1"
-                                    />
-                                ),
-                                note : (
-                                    <Trans i18nKey="TakQuickstartIos3.unfoldableCard1.step1.note"
-                                    />
-                                ),
+                                description : "TakQuickstartIos3.unfoldableCard1.step1",
+                                note : "TakQuickstartIos3.unfoldableCard1.step1.note",
                                 imageSrc : "../../../../../../assets/takguides/itak/itakserver11.png",
                                 imageClasses : "mx-auto pr-5 w-[400px] p-4",
                             },
                         ] }
                     />
                     <UnfoldableCard
-                        title={
-                            <Trans i18nKey="TakQuickstartIos3.unfoldableCard2.title"
-                            />
-                        }
+                        title="TakQuickstartIos3.unfoldableCard2.title"
                         styling="bg-backgroundLight"
                         steps={ [
                             {
-                                description : (
-                                    <Trans i18nKey="TakQuickstartIos3.unfoldableCard2.step1"
-                                    />
-                                ),
+                                description : "TakQuickstartIos3.unfoldableCard2.step1",
                                 imageSrc : "../../../../../../assets/takguides/itak/itakserver21.png",
                                 imageClasses : "mx-auto pr-5 w-[400px] p-4",
                             },
                             {
-                                description : (
-                                    <Trans i18nKey="TakQuickstartIos3.unfoldableCard2.step2"
-                                    />
-                                ),
+                                description : "TakQuickstartIos3.unfoldableCard2.step2",
                                 imageSrc : "../../../../../../assets/takguides/itak/itakserver31.png",
                                 imageClasses : "mx-auto pr-5 w-[400px] p-4",
                             },
                             {
-                                description : (
-                                    <Trans i18nKey="TakQuickstartIos3.unfoldableCard2.step3"
-                                    />
-                                ),
+                                description : "TakQuickstartIos3.unfoldableCard2.step3",
                                 imageSrc : "../../../../../../assets/takguides/itak/itakserver41.png",
                                 imageClasses : "mx-auto pr-5 w-[400px] p-4",
                             },
                             {
-                                description : (
-                                    <Trans i18nKey="TakQuickstartIos3.unfoldableCard2.step4"
-                                    />
-                                ),
+                                description : "TakQuickstartIos3.unfoldableCard2.step4",
                                 imageSrc : "../../../../../../assets/takguides/itak/itakserver51.png",
                                 imageClasses : "mx-auto pr-5 w-[400px] p-4",
                             },
                             {
-                                description : (
-                                    <Trans i18nKey="TakQuickstartIos3.unfoldableCard2.step5"
-                                    />
-                                ),
+                                description : "TakQuickstartIos3.unfoldableCard2.step5",
                                 imageSrc : "../../../../../../assets/takguides/itak/itakserver61.png",
                                 imageClasses : "mx-auto pr-5 w-[400px] p-4",
                             },
