--- a/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin1.html
+++ b/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin1.html
@@ -2,98 +2,66 @@
     name="TakQuickstartWin1"
     path="quickstart/win1"
 >
-<div className="pb-20">
+<div class="pb-20">
       <Layout
         showNavbar="true"
         showFooter="false"
-        navbarTitle={t("TakQuickstartWin1.navbarTitle")}
+        navbarTitle="TakQuickstartWin1.navbarTitle"
         backUrl="/app/services/tak/quickstart"
       >
         <StatusBar
-          title={t("TakQuickstartWin1.statusBarTitle")}
+          title="TakQuickstartWin1.statusBarTitle"
           progressMax={4}
           progressNow={1}
         />
         <CardsContainer>
-          <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="WinTAK"
               image="../../../../../../assets/icons/wintak.png"
-              details={
-                <Trans i18nKey="TakQuickstartWin1.serviceInfoCard.details" />
-              }
+              details="TakQuickstartWin1.serviceInfoCard.details"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard1.title" />
-              }
+              title="TakQuickstartWin1.unfoldableCard1.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard1.description1" />
-              }
+              description1="TakQuickstartWin1.unfoldableCard1.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva1.png"
               image2Classes="mx-auto pr-12 w-[240px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard1.description2" />
-              }
+              description2="TakQuickstartWin1.unfoldableCard1.description2"
               image3Src="../../../../../../assets/takguides/wintak/Kuva2.png"
               image3Classes="mx-auto pr-12 w-[240px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard1.description3" />
-              }
+              description3="TakQuickstartWin1.unfoldableCard1.description3"
               image4Src="../../../../../../assets/takguides/wintak/Kuva3.png"
               image4Classes="mx-auto pr-12 w-[400px] p-4"
-              description4={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard1.description4" />
-              }
+              description4="TakQuickstartWin1.unfoldableCard1.description4"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard2.title" />
-              }
+              title="TakQuickstartWin1.unfoldableCard2.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard2.description1" />
-              }
+              description1="TakQuickstartWin1.unfoldableCard2.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva4.png"
               image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard2.description2" />
-              }
+              description2="TakQuickstartWin1.unfoldableCard2.description2"
               image3Src="../../../../../../assets/takguides/wintak/Kuva5.png"
               image3Classes="mx-auto pr-5 w-[400px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard2.description3" />
-              }
+              description3="TakQuickstartWin1.unfoldableCard2.description3"
               image4Src="../../../../../../assets/takguides/wintak/Kuva8.png"
               image4Classes="mx-auto pr-5 w-[400px] p-4"
-              description4={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard2.description4" />
-              }
+              description4="TakQuickstartWin1.unfoldableCard2.description4"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard3.title" />
-              }
+              title="TakQuickstartWin1.unfoldableCard3.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard3.description1" />
-              }
+              description1="TakQuickstartWin1.unfoldableCard3.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva6.png"
               image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard3.description2" />
-              }
+              description2="TakQuickstartWin1.unfoldableCard3.description2"
               image3Src="../../../../../../assets/takguides/wintak/Kuva7.png"
               image3Classes="mx-auto pr-5 w-[400px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard3.description3" />
-              }
+              description3="TakQuickstartWin1.unfoldableCard3.description3"
               image4Src="../../../../../../assets/takguides/wintak/Kuva8.png"
               image4Classes="mx-auto pr-5 w-[400px] p-4"
-              description4={
-                <Trans i18nKey="TakQuickstartWin1.unfoldableCard3.description4" />
-              }
+              description4="TakQuickstartWin1.unfoldableCard3.description4"
             />
           </div>
         </CardsContainer>
