--- a/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin2.html
+++ b/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin2.html
@@ -2,107 +2,77 @@
     name="TakQuickstartWin2"
     path="quickstart/win2"
 >
-  <div className="pb-20">
+  <div class="pb-20">
       <Layout
         showNavbar="true"
         showFooter="false"
-        navbarTitle={"TakQuickstartWin2.navbarTitle"}
+        navbarTitle="TakQuickstartWin2.navbarTitle"
         backUrl="/app/services/tak/quickstart"
       >
         <StatusBar
-          title={"TakQuickstartWin2.statusBarTitle"}
+          title="TakQuickstartWin2.statusBarTitle"
           progressMax={4}
           progressNow={2}
         />
         <CardsContainer>
-          <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="WinTAK"
               image="../../../../../../assets/icons/wintak.png"
-              details={
-                <Trans i18nKey="TakQuickstartWin2.serviceInfoCard.details" />
-              }
+              details="TakQuickstartWin2.serviceInfoCard.details"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard1.title" />
-              }
+              title="TakQuickstartWin2.unfoldableCard1.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard1.description1" />
-              }
+              description1="TakQuickstartWin2.unfoldableCard1.description1"
               image2Src="../../../../../../assets/icons/windownload.svg"
               image2Link="https://arkipublic.blob.core.windows.net/ohjelmistot/WinTAK-CIV-latest.zip"
               image2Classes="w-[200px]"
-              note={t("TakQuickstartWin2.unfoldableCard1.note")}
+              note="TakQuickstartWin2.unfoldableCard1.note"
             />
             <UnfoldableCard
-              title={t("TakQuickstartWin2.unfoldableCardDownload.title")}
+              title="TakQuickstartWin2.unfoldableCardDownload.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCardDownload.description1" />
-              }
+              description1="TakQuickstartWin2.unfoldableCardDownload.description1"
               description2={
                 <Button
                   variant={{ width: "full" }}
                   onClick={handleDownloadButtonClick}
                   styling="m-1 px-3 bg-success text-white w-full"
                 >
-                  {t("serviceTak.grabZipButton")}
+                  "serviceTak.grabZipButton"
                 </Button>
               }
-              note={t("TakQuickstartIos1.unfoldableCard2.note")}
+              note="TakQuickstartIos1.unfoldableCard2.note"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard2.title" />
-              }
+              title="TakQuickstartWin2.unfoldableCard2.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard2.description1" />
-              }
+              description1="TakQuickstartWin2.unfoldableCard2.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva9.png"
               image2Classes="mx-auto pr-5 w-[290px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard2.description2" />
-              }
+              description2="TakQuickstartWin2.unfoldableCard2.description2"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard3.title" />
-              }
+              title="TakQuickstartWin2.unfoldableCard3.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard3.description1" />
-              }
+              description1="TakQuickstartWin2.unfoldableCard3.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva10.png"
               image2Classes="mx-auto pr-5 w-[300px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard3.description2" />
-              }
+              description2="TakQuickstartWin2.unfoldableCard3.description2"
               image3Src="../../../../../../assets/takguides/wintak/Kuva11.png"
               image3Classes="mx-auto pr-5 w-[300px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard3.description3" />
-              }
+              description3="TakQuickstartWin2.unfoldableCard3.description3"
               image4Src="../../../../../../assets/takguides/wintak/Kuva12.png"
               image4Classes="mx-auto pr-5 w-[300px] p-4"
-              description4={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard3.description4" />
-              }
+              description4="TakQuickstartWin2.unfoldableCard3.description4"
               image5Src="../../../../../../assets/takguides/wintak/Kuva13.png"
               image5Classes="mx-auto pr-5 w-[300px] p-4"
-              description5={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard3.description5" />
-              }
+              description5="TakQuickstartWin2.unfoldableCard3.description5"
               image6Src="../../../../../../assets/takguides/wintak/Kuva13-1.png"
               image6Classes="mx-auto pr-5 w-[300px] p-4"
-              description6={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard3.description6" />
-              }
-              description7={
-                <Trans i18nKey="TakQuickstartWin2.unfoldableCard3.description7" />
-              }
+              description6="TakQuickstartWin2.unfoldableCard3.description6"
+              description7="TakQuickstartWin2.unfoldableCard3.description7"
             />
           </div>
         </CardsContainer>
