--- a/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin3.html
+++ b/src/views/products/data/tak/quickstart/wintak/TakQuickstartWin3.html
@@ -2,151 +2,96 @@
     name="TakQuickstartWin3"
     path="quickstart/win3"
 >
-  <div className="pb-20">
+  <div class="pb-20">
     <Layout
         showNavbar="true"
         showFooter="false"
-        navbarTitle={t("TakQuickstartWin3.navbarTitle")}
+        navbarTitle="TakQuickstartWin3.navbarTitle"
         backUrl="/app/services/tak/quickstart"
       >
         <StatusBar
-          title={t("TakQuickstartWin3.statusBarTitle")}
+          title="TakQuickstartWin3.statusBarTitle"
           progressMax={4}
           progressNow="3"
         />
         <CardsContainer>
-          <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="WinTAK"
               image="../../../../../../assets/icons/wintak.png"
-              details={
-                <Trans i18nKey="TakQuickstartWin3.serviceInfoCard.details" />
-              }
+              details="TakQuickstartWin3.serviceInfoCard.details"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard1.title" />
-              }
+              title="TakQuickstartWin3.unfoldableCard1.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard1.description1" />
-              }
+              description1="TakQuickstartWin3.unfoldableCard1.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva14.png"
               image2Classes="mx-auto pr-5 w-[90px] p-4"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard2.title" />
-              }
+              title="TakQuickstartWin3.unfoldableCard2.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard2.description1" />
-              }
+              description1="TakQuickstartWin3.unfoldableCard2.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva16.png"
               image2Classes="mx-auto pr-5 w-[300px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard2.description2" />
-              }
+              description2="TakQuickstartWin3.unfoldableCard2.description2"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard3.title" />
-              }
+              title="TakQuickstartWin3.unfoldableCard3.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard3.description1" />
-              }
+              description1="TakQuickstartWin3.unfoldableCard3.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva17.png"
               image2Classes="mx-auto pr-5 w-[300px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard3.description2" />
-              }
+              description2="TakQuickstartWin3.unfoldableCard3.description2"
               image3Src="../../../../../../assets/takguides/wintak/Kuva18.png"
               image3Classes="mx-auto pr-5 w-[300px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard3.description3" />
-              }
+              description3="TakQuickstartWin3.unfoldableCard3.description3"
               image4Src="../../../../../../assets/takguides/wintak/Kuva19.png"
               image4Classes="mx-auto pr-5 w-[300px] p-4"
-              description4={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard3.description4" />
-              }
+              description4="TakQuickstartWin3.unfoldableCard3.description4"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard4.title" />
-              }
+              title="TakQuickstartWin3.unfoldableCard4.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard4.description1" />
-              }
+              description1="TakQuickstartWin3.unfoldableCard4.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva20.png"
               image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard4.description2" />
-              }
+              description2="TakQuickstartWin3.unfoldableCard4.description2"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard5.title" />
-              }
+              title="TakQuickstartWin3.unfoldableCard5.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard5.description1" />
-              }
+              description1="TakQuickstartWin3.unfoldableCard5.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva21.png"
               image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard5.description2" />
-              }
+              description2="TakQuickstartWin3.unfoldableCard5.description2"
               image3Src="../../../../../../assets/takguides/wintak/Kuva23.png"
               image3Classes="mx-auto pr-5 w-[400px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard5.description3" />
-              }
+              description3="TakQuickstartWin3.unfoldableCard5.description3"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard6.title" />
-              }
+              title="TakQuickstartWin3.unfoldableCard6.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard6.description1" />
-              }
+              description1="TakQuickstartWin3.unfoldableCard6.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva24.png"
               image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard6.description2" />
-              }
+              description2="TakQuickstartWin3.unfoldableCard6.description2"
               image3Src="../../../../../../assets/takguides/wintak/Kuva25.png"
               image3Classes="mx-auto pr-5 w-[400px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard6.description3" />
-              }
+              description3="TakQuickstartWin3.unfoldableCard6.description3"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard7.title" />
-              }
+              title="TakQuickstartWin3.unfoldableCard7.title"
               styling="bg-backgroundLight"
-              description1={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard7.description1" />
-              }
+              description1="TakQuickstartWin3.unfoldableCard7.description1"
               image2Src="../../../../../../assets/takguides/wintak/Kuva26.png"
               image2Classes="mx-auto pr-5 w-[400px] p-4"
-              description2={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard7.description2"
-                />
-              }
-              note={t("TakQuickstartWin3.unfoldableCard7.note")}
+              description2="TakQuickstartWin3.unfoldableCard7.description2"
+              note="TakQuickstartWin3.unfoldableCard7.note"
               image4Src="../../../../../../assets/takguides/wintak/Kuva27.png"
               image4Classes="mx-auto pr-10 w-[200px] p-4"
-              description3={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard7.description3" />
-              }
-              description4={
-                <Trans i18nKey="TakQuickstartWin3.unfoldableCard7.description4" />
-              }
+              description3="TakQuickstartWin3.unfoldableCard7.description3"
+              description4="TakQuickstartWin3.unfoldableCard7.description4"
             />
           </div>
         </CardsContainer>
