--- a/src/views/products/data/tak/usage/android/TakUsageAndroid1.html
+++ b/src/views/products/data/tak/usage/android/TakUsageAndroid1.html
@@ -1,13 +1,13 @@
 <View name="TakUsageAndroid1" path="usage/android1">
-    <div className="pb-20">
+    <div class="pb-20">
       <Layout
         showNavbar="true"
         showFooter="false"
-        navbarTitle={t("TakUsageAndroid1.navbarTitle")}
+        navbarTitle="TakUsageAndroid1.navbarTitle"
         backUrl="/app/services/tak/Usage"
       >
         <StatusBar
-          title={t("TakUsageAndroid1.statusBarTitle")}
+          title="TakUsageAndroid1.statusBarTitle"
           progressMax={3}
           progressNow={1}
         />
@@ -15,74 +15,54 @@
           <ServiceTakUsageCard />
         </CardsContainer>
         <CardsContainer>
-          <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="ATAK"
               image="../../../../../../assets/icons/tak-logo.png"
-              details={
-                <Trans i18nKey="TakUsageAndroid1.serviceInfoCard.details" />
-              }
+              details="TakUsageAndroid1.serviceInfoCard.details"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakUsageAndroid1.unfoldableCard1.title" />
-              }
+              title="TakUsageAndroid1.unfoldableCard1.title"
               styling="bg-backgroundLight"
               steps={[
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid1.unfoldableCard1.step1" />
-                  ),
+                  description: "TakUsageAndroid1.unfoldableCard1.step1",
                   imageSrc: "../../../../../../assets/takguides/atak/27-BaseMap.png",
                   imageClasses: "m-3 w-[300px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid1.unfoldableCard1.step2" />
-                  ),
+                  description: "TakUsageAndroid1.unfoldableCard1.step2",
                   imageSrc: "../../../../../../assets/takguides/atak/Frame.png",
                   imageClasses: "align-right w-[50px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid1.unfoldableCard1.step3" />
-                  ),
+                  description: "TakUsageAndroid1.unfoldableCard1.step3",
                   imageSrc: "../../../../../../assets/takguides/atak/Frame-1.png",
                   imageClasses: "align-right w-[35px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid1.unfoldableCard1.step4" />
-                  ),
+                  description: "TakUsageAndroid1.unfoldableCard1.step4",
                   imageSrc: "../../../../../../assets/takguides/atak/Frame-2.png",
                   imageClasses: "align-right w-[50px]",
                 },
               ]}
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakUsageAndroid1.unfoldableCard2.title" />
-              }
+              title="TakUsageAndroid1.unfoldableCard2.title"
               styling="bg-backgroundLight"
               steps={[
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid1.unfoldableCard2.step1" />
-                  ),
+                  description: "TakUsageAndroid1.unfoldableCard2.step1",
                   imageSrc: "../../../../../../assets/takguides/atak/Frame-3.png",
                   imageClasses: "align-right w-[40px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid1.unfoldableCard2.step2" />
-                  ),
+                  description: "TakUsageAndroid1.unfoldableCard2.step2",
                   imageSrc: "../../../../../../assets/takguides/atak/Frame-4.png",
                   imageClasses: "align-right w-[50px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid1.unfoldableCard2.step3" />
-                  ),
+                  description: "TakUsageAndroid1.unfoldableCard2.step3",
                   imageSrc: "../../../../../../assets/takguides/atak/Frame-5.png",
                   imageClasses: "align-right w-[50px]",
                 },
