--- a/src/views/products/data/tak/usage/android/TakUsageAndroid2.html
+++ b/src/views/products/data/tak/usage/android/TakUsageAndroid2.html
@@ -1,13 +1,13 @@
 <View name="TakUsageAndroid2" path="usage/android2">
-    <div className="pb-20">
+    <div class="pb-20">
       <Layout
         showNavbar="true"
         showFooter="false"
-        navbarTitle={t("TakUsageAndroid2.navbarTitle")}
+        navbarTitle="TakUsageAndroid2.navbarTitle"
         backUrl="/app/services/tak/Usage"
       >
         <StatusBar
-          title={t("TakUsageAndroid2.statusBarTitle")}
+          title="TakUsageAndroid2.statusBarTitle"
           progressMax={3}
           progressNow={2}
         />
@@ -15,113 +15,81 @@
           <ServiceTakUsageCard />
         </CardsContainer>
         <CardsContainer>
-          <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
               title="ATAK"
               image="../../../../../../assets/icons/tak-logo.png"
-              details={
-                <Trans i18nKey="TakUsageAndroid2.serviceInfoCard.details" />
-              }
+              details="TakUsageAndroid2.serviceInfoCard.details"
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakUsageAndroid2.unfoldableCard1.title" />
-              }
+              title="TakUsageAndroid2.unfoldableCard1.title"
               styling="bg-backgroundLight"
               steps={[
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard1.step1" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard1.step1",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage1.png",
                   imageClasses: "m-3 w-[300px]",
                 },
               ]}
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakUsageAndroid2.unfoldableCard2.title" />
-              }
+              title="TakUsageAndroid2.unfoldableCard2.title"
               styling="bg-backgroundLight"
               steps={[
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard2.step1" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard2.step1",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage1.png",
                   imageClasses: "m-3 w-[500px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard2.step2" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard2.step2",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage3.png",
                   imageClasses: "m-3 w-[500px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard2.step3" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard2.step3",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage3-1.png",
                   imageClasses: "m-3 w-[500px]",
                 },
               ]}
             />
             <UnfoldableCard
-              title={
-                <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.title" />
-              }
+              title="TakUsageAndroid2.unfoldableCard3.title"
               styling="bg-backgroundLight"
               steps={[
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.step1" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard3.step1",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage4.png",
                   imageClasses: "m-3 w-[500px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.step2" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard3.step2",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage5.png",
                   imageClasses: "m-3 w-[500px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.step3" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard3.step3",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage6.png",
                   imageClasses: "m-3 w-[500px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.step4" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard3.step4",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage7.png",
                   imageClasses: "m-3 w-[500px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.step5" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard3.step5",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage8.png",
                   imageClasses: "m-3 w-[500px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.step6" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard3.step6",
                   imageSrc: "../../../../../../assets/takguides/atak/atakusage9.png",
                   imageClasses: "m-3 w-[500px]",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.step7" />
-                  ),
-                  note: (
-                    <Trans i18nKey="TakUsageAndroid2.unfoldableCard3.note" />
-                  ),
+                  description: "TakUsageAndroid2.unfoldableCard3.step7",
+                  note: "TakUsageAndroid2.unfoldableCard3.note",
                 },
               ]}
             />
