--- a/src/views/products/data/tak/usage/wintak/TakUsageWin3.html
+++ b/src/views/products/data/tak/usage/wintak/TakUsageWin3.html
@@ -1,48 +1,38 @@
 <View name="TakUsageWin3" path="usage/win3">
-    <div className="pb-32">
+    <div class="pb-32">
       <Layout
         showNavbar="true"
         showFooter="false"
-        navbarTitle={<Trans i18nKey="takUsageWin3.navbarTitle" />}
+        navbarTitle="takUsageWin3.navbarTitle"
         backUrl="/app/services/tak/usage"
       >
         <StatusBar
-          title={t("takUsageWin3.navbarTitle")}
+          title="takUsageWin3.navbarTitle"
           progressMax={4}
           progressNow="3"
         />
         <CardsContainer>
-          <div className="flex flex-col items-center w-full gap-2 justify-center p-5">
+          <div class="flex flex-col items-center w-full gap-2 justify-center p-5">
             <ServiceInfoCard
-              title={<Trans i18nKey="takUsageWin3.serviceInfoCard.title" />}
+              title="takUsageWin3.serviceInfoCard.title"
               image="../../../../../../assets/icons/wintak.png"
-              details={
-                <Trans i18nKey="takUsageWin3.serviceInfoCard.details" />
-              }
+              details="takUsageWin3.serviceInfoCard.details"
             >
               <ServiceTakUsageCard />
             </ServiceInfoCard>
             <UnfoldableCard
-              title={<Trans i18nKey="takUsageWin3.unfoldableCard1.title" />}
+              title="takUsageWin3.unfoldableCard1.title"
               styling="bg-backgroundLight"
               steps={[
                 {
-                  description: (
-                    <Trans i18nKey="takUsageWin3.unfoldableCard1.step1" />
-                  ),
+                  description: "takUsageWin3.unfoldableCard1.step1",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="takUsageWin3.unfoldableCard1.step2" />
-                  ),
-                  note: (
-                    <Trans i18nKey="takUsageWin3.unfoldableCard1.note" />
-                  ),
+                  description: "takUsageWin3.unfoldableCard1.step2",
+                  note: "takUsageWin3.unfoldableCard1.note",
                 },
                 {
-                  description: (
-                    <Trans i18nKey="takUsageWin3.unfoldableCard1.step3" />
-                  ),
+                  description: "takUsageWin3.unfoldableCard1.step3",
                 },
               ]}
             />
